# veridian-manager

./: Cargo.toml  README.md
bundle-deploy/: Cargo.toml
bundle-deploy/src/: env.rs  file_system.rs  lib.rs
scripts/: test.rhai
src/: application.rs  config.rs  database.rs  dir_path.rs  installer.rs  installer_builder.rs  lib.rs  main.rs  recorder.rs
src/assets/: default-config.toml
